adguard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  selector:
    matchLabels:
      app: adguard
      release: adguard
  template:
    metadata:
      labels:
        app: adguard
        release: adguard
    spec:
      volumes:
      - name: adguard-data  # < linkname of the volume for the pvc
        hostPath:
          path: /mnt/k3s/adguard-data # < pvc name we created in the previous yaml
      containers:
      - image: adguard/adguardhome:latest
        imagePullPolicy: Always
        name: adguard
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 3000
          name: http
          protocol: TCP
        volumeMounts:
          - name: adguard-data
            mountPath: /opt/adguardhome/work
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
