adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service    # < name of the service
  namespace: adguard # < namespace where place the deployment and pods
spec:
  selector:
    app: adguard # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 80
    - name: webinterface
      protocol: TCP
      port: 3000
